Fix right side padding on mobile screen size

--- a/src/assets/less/components/_home.less
+++ b/src/assets/less/components/_home.less
@@ -21,6 +21,17 @@ body {
     overflow-x: hidden;
 }
 
+main {
+    background-color: #fff;
+}
+
+@media(max-width: 575px) {
+    .row {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
 @media(min-width: 992px) {
     .contents {
         max-width: 65%;
