--- a/src/assets/less/components/_post.less
+++ b/src/assets/less/components/_post.less
@@ -157,12 +157,6 @@
         flex-grow: 3;
         flex-basis: 0;
     }
-
-    .comments-section {
-        max-width: 100%;
-        margin-top: 1rem;
-        padding: 0.5rem;
-    }
 }
 
 @media (min-width: 768px) {
